# IngenicoTask

./: .vimrc  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/clients/: Client.cpp  ClientsDataQueue.cpp
src/includes/clients/: Client.hpp  ClientData.hpp  ClientsDataQueue.hpp
src/includes/server/: Server.hpp
src/server/: Server.cpp
